# microphone-library-for-pico

.github/workflows/: main.yml  mainn.yml  mainnn.yml
examples/usb_microphone/: CMakeLists.txt  main.c
src/: pdm_microphone.c  pdm_microphone.h  pdm_microphone.pio
src/include/pico/: pdm_microphone.h
